# pkv-heihilfe-app

./: .env.example  .gitignore  BACKLOG.md  CLAUDE.md  README.md  docker-compose.release.yml  docker-compose.yml  seed.example.json
backend/: Cargo.toml  Dockerfile
backend/migrations/: 0001_init.sql  0002_archiv.sql  0003_referenz.sql  0004_erstattet.sql  0005_gescannt.sql  0006_gescannt_split.sql  0007_anhaenge.sql  0008_bre_schwelle.sql  0009_pkv_verzicht.sql  0010_paperless_ref.sql  0011_einstellungen.sql  0012_beihilfe_antraege.sql  0012_pkv.sql  0013_beihilfe_bescheide.sql  0013_satz_historie.sql  0014_aktivitaetslog.sql  0014_antrag.sql  0015_beihilfe_bescheid.sql  0015_bescheid_anhaenge.sql  0016_antrag_paperless_url.sql  0016_beihilfe_position.sql  0017_bescheid_pos_kosten.sql  0018_beihilfestelle_personen.sql  0019_sync_beihilfe_erstattet.sql  0020_person_satz_historie.sql  0021_antrag_typ.sql  0022_pkv_stammdaten.sql  0023_belege.sql  0024_beleg_referenzen.sql  0025_beleg_felder.sql  0026_beleg_ocr.sql  0027_beleg_stelle.sql  0028_bescheid_anhang_ocr.sql
backend/src/: config.rs  errors.rs  main.rs  seed.rs
backend/src/auth/: mod.rs
backend/src/db/: mod.rs
backend/src/handlers/: aktivitaet.rs  anhaenge.rs  antraege.rs  auth.rs  backup.rs  beihilfe_antraege.rs  beihilfe_bescheide.rs  beihilfe_positionen.rs  beihilfestellen.rs  belege.rs  benutzer.rs  config.rs  correspondents.rs  dashboard.rs  einstellungen.rs  export.rs  logo.rs  mod.rs  person_satz_historie.rs  personen.rs  pkv.rs  rechnungen.rs  setup.rs  webhooks.rs
backend/src/models/: anhang.rs  (+15 more)
(+110 files in other folders)
